--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,6 @@
 ---
 version: 0.2
 
-env:
-     parameter-store:         
-       JWT_SECRET: JWT_SECRET
 
 phases:
   install:
@@ -29,6 +26,7 @@ phases:
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
+        - python -m pytest test_main.py
   build:
     commands:
       - docker build --tag $REPOSITORY_URI:$TAG .
@@ -41,3 +39,9 @@ phases:
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files: build.json
+  
+
+env:
+     parameter-store:         
+       JWT_SECRET: JWT_SECRET
+       
