--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,7 @@ phases:
         - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' simple_jwt_api.yml
         - $(aws ecr get-login --no-include-email)
         - export KUBECONFIG=$HOME/.kube/config
+        - pip3 install -r requirements.txt
         - python -m pytest test_main.py
   build:
     commands:
@@ -37,6 +38,7 @@ phases:
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn $EKS_KUBECTL_ROLE_ARN
       - kubectl apply -f simple_jwt_api.yml 
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
+      - kubectl set env deployment/simple-jwt-api JWT_SECRET=$JWT_SECRET
 artifacts:
   files: build.json
   
